[package]
name = "TestQuinnUdpTransport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.1"
quinn-udp = "0.4"
turmoil = "0.5"
tokio = "1"
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
futures = "0.3"
